--- a/css/styles.css
+++ b/css/styles.css
@@ -12,55 +12,63 @@
 body{
     background-color: #8d6346;
     font-family: 'Roboto Condensed', sans-serif;
-    color: #f7fff7;
     position: relative;
     padding-bottom: 3em;
     min-height: 100vh;
     padding: 0px;
-     }
-
-header .header-logo img{
-    width: 320px;
-    height: auto;
-    position: fixed;
-    z-index: 2;
-}     
-
-nav{
-    position: fixed;
-    top: 0;
-    width: 100%;
-    padding: 10px 45px;
-    box-sizing: border-box;
-    background-color: #163554; 
-    border-bottom: none;
-    box-shadow: 0px 5px 16px 0px rgba(0,0,0,0.83);
-    -webkit-box-shadow: 0px 5px 16px 0px rgba(0,0,0,0.83);
-    -moz-box-shadow: 0px 5px 16px 0px rgba(0,0,0,0.83);
 }
 
-
-nav ul {
-    list-style: none;
-    float: right;
-    margin: 0;
-    padding: 0;
-    display: flex;
+.navbar-brand img{
+    height: 90px;
+    width: auto;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    -webkit-transition: 0.7s;
+    transition: 0.7s;
 }
 
-nav ul li a{
-    line-height: 80px;
-    color: #bec6cc;
-    padding: 12px 30px;
-    text-decoration: none;
-    font-size: 16px;
-    font-weight: bold;
-    text-transform: uppercase;
+.navbar-brand img:hover{
+-webkit-transform: scale(1.1);
+transform: scale(1.1);
+}
+
+.navbar{
+padding: 0%;
+height: 100px;
+}
+
+.container-fluid{
+top: 0;
+width: 100%;
+height: 100px;
+padding: 10px 45px;
+box-sizing: border-box;
+background-color: #163554; 
+border-bottom: none;
+box-shadow: 0px 5px 16px 0px rgba(0,0,0,0.83);
+-webkit-box-shadow: 0px 5px 16px 0px rgba(0,0,0,0.83);
+-moz-box-shadow: 0px 5px 16px 0px rgba(0,0,0,0.83);
 }
 
 nav ul li a:hover{
-    background: rgba(15, 14, 48, 0.224);
-    border-radius: 6px;
+background: rgba(15, 14, 48, 0.224);
+border-radius: 6px;
+}
+
+#navbarNav {
+justify-content: flex-end;
+}
+
+.nav-item a p{
+color: #bec6cc;
+padding: 10px;
+padding-top: 28px;
+font-weight: bold;
+font-size: 16px;
+}
+
+.carousel-inner{
+    height: 709px;
 }
 
 main section h1{
@@ -81,19 +89,6 @@ main section p{
     color: #bec6cc;
     font-weight: bold;
 }
-
-main{ 
-    background-image: url(../img/banner.jpg);
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 100vh; 
-    box-shadow: 0px 5px 15px -3px rgba(0,0,0,0.75);
-    -webkit-box-shadow: 0px 5px 15px -3px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 5px 15px -3px rgba(0,0,0,0.75);   
-}
-
 
 .container__cards{
     max-width: 1200px;
@@ -138,7 +133,7 @@ main{
     filter: none;
 }
 
-.card .img__back{
+.card .img_back{
     width: 100%;
     height: 200px;
     position: absolute;
@@ -147,10 +142,10 @@ main{
     background-size: cover;
     border-radius: 20px;
     transition: all 300ms;
-    background-image: url(/img/back-card.png);
+    background-image: url(../img/back-card.png);
 }
 
-.card:hover .img__back{
+.card:hover .img_back{
     bottom: -40px;
 }
 
@@ -275,57 +270,7 @@ body{
     padding: 0px;
  }
 
-header .logo img{
-    height: 100px;
-    width: auto;
-    position: fixed;
-    padding-bottom: 20px;
-    -webkit-transition: 0.7s;
-    transition: 0.7s;
-}
-
-header .logo img:hover{
-    -webkit-transform: scale(1.1);
-    transform: scale(1.1);
-}
-
- nav{
-    position: fixed;
-    top: 0;
-    width: 100%;
-    padding: 10px 45px;
-    box-sizing: border-box;
-    background-color: #163554; 
-    z-index: 1;
-    border-bottom: none;
-    box-shadow: 0px 5px 16px 0px rgba(0,0,0,0.83);
-    -webkit-box-shadow: 0px 5px 16px 0px rgba(0,0,0,0.83);
-    -moz-box-shadow: 0px 5px 16px 0px rgba(0,0,0,0.83);
-}
-
-
-nav ul {
-    list-style: none;
-    float: right;
-    margin: 0;
-    padding: 0;
-    display: flex;
-}
-
-nav ul li a{
-    line-height: 80px;
-    color: #bec6cc;
-    padding: 12px 30px;
-    text-decoration: none;
-    font-size: 16px;
-    font-weight: bold;
-    text-transform: uppercase;
-}
-
-nav ul li a:hover{
-    background: rgba(15, 14, 48, 0.224);
-    border-radius: 6px;
-}
+ 
 
 section{
     width: 90%;
