--- a/css/contacto.css
+++ b/css/contacto.css
@@ -19,62 +19,60 @@ body{
     padding: 0px;
 }
 
-header .logo img{
-    height: 100px;
+.navbar-brand img{
+    height: 90px;
     width: auto;
-    position: fixed;
-    padding-bottom: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     -webkit-transition: 0.7s;
     transition: 0.7s;
 }
 
-header .logo img:hover{
-    -webkit-transform: scale(1.1);
-    transform: scale(1.1);
+.navbar-brand img:hover{
+-webkit-transform: scale(1.1);
+transform: scale(1.1);
 }
 
- nav{
-    position: fixed;
-    top: 0;
-    width: 100%;
-    padding: 10px 45px;
-    box-sizing: border-box;
-    background-color: #163554;
-    z-index: 1; 
-    border-bottom: none;
-    box-shadow: 0px 5px 16px 0px rgba(0,0,0,0.83);
-    -webkit-box-shadow: 0px 5px 16px 0px rgba(0,0,0,0.83);
-    -moz-box-shadow: 0px 5px 16px 0px rgba(0,0,0,0.83);
+.navbar{
+padding: 0%;
+height: 100px;
 }
 
-
-nav ul {
-    list-style: none;
-    float: right;
-    margin: 0;
-    padding: 0;
-    display: flex;
-}
-
-nav ul li a{
-    line-height: 80px;
-    color: #bec6cc;
-    padding: 12px 30px;
-    text-decoration: none;
-    font-size: 16px;
-    font-weight: bold;
-    text-transform: uppercase;
+.container-fluid{
+top: 0;
+width: 100%;
+height: 100px;
+padding: 10px 45px;
+box-sizing: border-box;
+background-color: #163554; 
+border-bottom: none;
+box-shadow: 0px 5px 16px 0px rgba(0,0,0,0.83);
+-webkit-box-shadow: 0px 5px 16px 0px rgba(0,0,0,0.83);
+-moz-box-shadow: 0px 5px 16px 0px rgba(0,0,0,0.83);
 }
 
 nav ul li a:hover{
-    background: rgba(15, 14, 48, 0.224);
-    border-radius: 6px;
+background: rgba(15, 14, 48, 0.224);
+border-radius: 6px;
+}
+
+#navbarNav {
+justify-content: flex-end;
+}
+
+.nav-item a p{
+color: #bec6cc;
+padding: 10px;
+padding-top: 28px;
+font-weight: bold;
+font-size: 16px;
 }
 
 section{
     padding-left: 120px;
     padding-right: 120px;
     margin: 160px 140px;
+    padding-bottom: 600px;
 }
 
 legend{
