--- a/css/quienessomos.css
+++ b/css/quienessomos.css
@@ -9,20 +9,6 @@
     font-family: 'Roboto Condensed', sans-serif;
      }
 
-header .logo img{
-    height: 100px;
-    width: auto;
-    position: fixed;
-    padding-bottom: 20px;
-    -webkit-transition: 0.7s;
-    transition: 0.7s;
-}
-
-header .logo img:hover{
-    -webkit-transform: scale(1.1);
-    transform: scale(1.1);
-}
-
 body{
     background-image: url(../img/fondo.jpg);
     font-family: 'Roboto Condensed', sans-serif;
@@ -31,44 +17,53 @@ body{
     padding-bottom: 3em;
     min-height: 100vh;
     padding: 0px;
- }
-
- nav{
-    position: fixed;
-    top: 0;
-    width: 100%;
-    padding: 10px 45px;
-    box-sizing: border-box;
-    background-color: #163554; 
-    z-index: 1;
-    border-bottom: none;
-    box-shadow: 0px 5px 16px 0px rgba(0,0,0,0.83);
-    -webkit-box-shadow: 0px 5px 16px 0px rgba(0,0,0,0.83);
-    -moz-box-shadow: 0px 5px 16px 0px rgba(0,0,0,0.83);
 }
 
-
-nav ul {
-    list-style: none;
-    float: right;
-    margin: 0;
-    padding: 0;
-    display: flex;
+.navbar-brand img{
+    height: 90px;
+    width: auto;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    -webkit-transition: 0.7s;
+    transition: 0.7s;
 }
 
-nav ul li a{
-    line-height: 80px;
-    color: #bec6cc;
-    padding: 12px 30px;
-    text-decoration: none;
-    font-size: 16px;
-    font-weight: bold;
-    text-transform: uppercase;
+.navbar-brand img:hover{
+-webkit-transform: scale(1.1);
+transform: scale(1.1);
+}
+
+.navbar{
+padding: 0%;
+height: 100px;
+}
+
+.container-fluid{
+top: 0;
+width: 100%;
+padding: 10px 45px;
+box-sizing: border-box;
+background-color: #163554; 
+border-bottom: none;
+box-shadow: 0px 5px 16px 0px rgba(0,0,0,0.83);
+-webkit-box-shadow: 0px 5px 16px 0px rgba(0,0,0,0.83);
+-moz-box-shadow: 0px 5px 16px 0px rgba(0,0,0,0.83);
 }
 
 nav ul li a:hover{
-    background: rgba(15, 14, 48, 0.224);
-    border-radius: 6px;
+background: rgba(15, 14, 48, 0.224);
+border-radius: 6px;
+}
+
+#navbarNav {
+justify-content: flex-end;
+}
+
+.nav-item a p{
+color: #bec6cc;
+padding-top: 25px;
+font-weight: bold;
+font-size: 16px;
 }
 
 section{
