--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ footer {
     margin-left: 28%;
     padding-top: 45px;
     font-family: 'Cinzel', serif;
-    color: #bec6cc;
+    color: #e0e6ec;
     font-size: 18px; }
   footer .contacto {
     margin-left: 34%;
@@ -29,7 +29,7 @@ footer {
   footer .contacto h3 {
     font-family: 'Cinzel', serif;
     font-size: 30px;
-    color: #bec6cc; }
+    color: #e0e6ec; }
   footer .footer-link img {
     width: 40px;
     padding: 4px;
@@ -46,10 +46,6 @@ nav .navbar-brand img {
     -webkit-transform: scale(1.1);
     transform: scale(1.1); }
 
-nav .navbar {
-  padding-top: 0px;
-  height: 100px; }
-
 nav .container-fluid {
   top: 0;
   width: 100%;
@@ -62,7 +58,7 @@ nav .container-fluid {
   -moz-box-shadow: 0px 5px 16px 0px rgba(0, 0, 0, 0.83); }
 
 nav .nav-item a p {
-  color: #bec6cc;
+  color: #e0e6ec;
   padding: 10px;
   padding-top: 28px;
   font-weight: bold;
@@ -92,6 +88,12 @@ body {
   min-height: 100vh;
   padding: 0px; }
 
+.gintonic h1, .martini-titulo h1, .negroni h1 {
+  font-family: 'Cinzel', serif;
+  font-size: 65px;
+  color: #0a2239;
+  text-align: center; }
+
 .home {
   width: 100%;
   padding: 0px;
@@ -108,7 +110,6 @@ body {
   z-index: 1; }
 
 .home .carousel-item:before {
-  content: '';
   position: absolute;
   left: 0;
   top: 0;
@@ -125,16 +126,16 @@ body {
   text-align: center; }
 
 .home .carousel-item h2 {
-  font-size: 60px;
-  color: #bec6cc;
+  font-size: 65px;
+  color: #e0e6ec;
   margin: 0 0 10px;
   opacity: 0;
   font-family: 'Cinzel', serif; }
 
 .home .carousel-item p {
-  font-size: 30px;
+  font-size: 40px;
   margin: 0;
-  color: #bec6cc;
+  color: #e0e6ec;
   opacity: 0;
   font-family: 'Cinzel', serif; }
 
@@ -168,9 +169,9 @@ body {
     height: 60px;
     width: 60px; }
   .home .carousel-item h2 {
-    font-size: 45px; }
+    font-size: 40px; }
   .home .carousel-item p {
-    font-size: 22px; } }
+    font-size: 24px; } }
 
 .container__cards {
   max-width: 1200px;
@@ -243,7 +244,7 @@ body {
   border: none;
   background: #446b93;
   color: #bec6cc;
-  font-size: 14px;
+  font-size: 16px;
   cursor: pointer;
   border-radius: 8px;
   transition: all 300ms;
@@ -257,17 +258,17 @@ section {
   width: 90%;
   max-width: 1180px;
   margin: 10px auto;
-  padding-top: 125px; }
+  padding-top: 105px; }
 
 .gintonic {
   margin: 20px;
   padding: 50px 0px;
   display: grid;
-  grid-template-areas: "gin-titulo gin-titulo img-gin" "descripcion-gintonic descripcion-gintonic img-gin" "elaboracion-gintonic elaboracion-gintonic elaboracion-gintonic";
   grid-template-columns: repeat(auto-fill, 1fr);
   grid-template-areas: repeat(3, 1fr);
   grid-row-gap: 10px;
-  grid-column-gap: 18px; }
+  grid-column-gap: 18px;
+  grid-template-areas: "gin-titulo gin-titulo img-gin" "descripcion-gintonic descripcion-gintonic img-gin" "elaboracion-gintonic elaboracion-gintonic elaboracion-gintonic"; }
 
 .gin-titulo {
   grid-area: gin-titulo; }
@@ -286,12 +287,6 @@ section {
 .gin-titulo {
   padding-bottom: 44px; }
 
-.gintonic h1 {
-  font-family: 'Cinzel', serif;
-  font-size: 72px;
-  color: #0a2239;
-  text-align: center; }
-
 .gintonic aside img {
   width: 400px;
   height: 400px;
@@ -306,7 +301,7 @@ section {
 
 .descripcion-gintonic {
   font-family: 'Playfair Display', serif;
-  font-size: 22px;
+  font-size: 24px;
   color: #0a2239;
   padding-bottom: 30px;
   margin-left: 50px; }
@@ -325,12 +320,12 @@ section {
 
 .gintonic h4 {
   font-family: 'Playfair Display', serif;
-  font-size: 30px;
+  font-size: 24px;
   color: #0a2239; }
 
 .elaboracion-gintonic .pasos {
   font-family: 'Playfair Display', serif;
-  font-size: 22px;
+  font-size: 24px;
   color: #0a2239;
   padding: 4px; }
 
@@ -341,11 +336,11 @@ section {
   margin: 20px;
   padding: 50px 0px;
   display: grid;
-  grid-template-areas: "martini-titulo martini-titulo img-martini" "descripcion-martini descripcion-martini img-martini" "elaboracion-martini elaboracion-martini elaboracion-martini";
   grid-template-columns: repeat(auto-fill, 1fr);
   grid-template-areas: repeat(3, 1fr);
   grid-row-gap: 10px;
-  grid-column-gap: 18px; }
+  grid-column-gap: 18px;
+  grid-template-areas: "martini-titulo martini-titulo img-martini" "descripcion-martini descripcion-martini img-martini" "elaboracion-martini elaboracion-martini elaboracion-martini"; }
 
 .martini-titulo {
   grid-area: martini-titulo; }
@@ -360,11 +355,7 @@ section {
   grid-area: elaboracion-martini; }
 
 .martini-titulo h1 {
-  font-family: 'Cinzel', serif;
-  font-size: 65px;
-  color: #0a2239;
-  padding: 40px 0px;
-  text-align: center; }
+  padding: 40px 0px; }
 
 .dry-martini aside img {
   height: 400px;
@@ -380,7 +371,7 @@ section {
 
 .descripcion-martini {
   font-family: 'Playfair Display', serif;
-  font-size: 22px;
+  font-size: 24px;
   color: #0a2239;
   padding-bottom: 30px;
   margin-left: 50px; }
@@ -399,7 +390,7 @@ section {
 
 .pasos p {
   font-family: 'Playfair Display', serif;
-  font-size: 22px;
+  font-size: 24px;
   color: #0a2239;
   padding: 3px; }
 
@@ -407,11 +398,11 @@ section {
   margin: 20px;
   padding: 50px 0px;
   display: grid;
-  grid-template-areas: "negroni-titulo negroni-titulo img-negroni" "descripcion-negroni descripcion-negroni img-negroni" "elaboracion-negroni elaboracion-negroni elaboracion-negroni";
-  grid-template-columns: repeat(auto-fill 1fr);
+  grid-template-columns: repeat(auto-fill, 1fr);
   grid-template-areas: repeat(3, 1fr);
   grid-row-gap: 10px;
-  grid-column-gap: 18px; }
+  grid-column-gap: 18px;
+  grid-template-areas: "negroni-titulo negroni-titulo img-negroni" "descripcion-negroni descripcion-negroni img-negroni" "elaboracion-negroni elaboracion-negroni elaboracion-negroni"; }
 
 .negroni-titulo {
   grid-area: negroni-titulo; }
@@ -426,11 +417,7 @@ section {
   grid-area: elaboracion-negroni; }
 
 .negroni h1 {
-  font-family: 'Cinzel', serif;
-  font-size: 65px;
-  color: #0a2239;
-  padding-bottom: 8px;
-  text-align: center; }
+  padding-bottom: 8px; }
 
 .negroni aside img {
   width: 400px;
@@ -446,7 +433,7 @@ section {
 
 .descripcion-negroni {
   font-family: 'Cinzel', serif;
-  font-size: 22px;
+  font-size: 24px;
   color: #0a2239;
   padding-bottom: 30px;
   margin-left: 50px; }
@@ -465,13 +452,13 @@ section {
 
 .negroni h4 {
   font-family: 'Cinzel', serif;
-  font-size: 30px;
+  font-size: 24px;
   color: #0a2239;
   padding-bottom: 9px; }
 
 .elaboracion-negroni .pasos {
   font-family: 'Playfair Display', serif;
-  font-size: 22px;
+  font-size: 24px;
   color: #0a2239;
   padding: 4px; }
 
@@ -483,7 +470,7 @@ section {
   padding-left: 120px;
   padding-right: 120px;
   margin: 17px 140px;
-  padding-bottom: 600px; }
+  padding-bottom: 300px; }
 
 legend {
   box-shadow: 0px 0px 125px 18px rgba(0, 0, 0, 0.43);
@@ -498,7 +485,7 @@ legend:hover {
   transform: scale(1.06); }
 
 section h1 {
-  font-size: 60px;
+  font-size: 65px;
   font-family: 'Cinzel', serif;
   text-align: center;
   padding-top: 10px;
@@ -521,20 +508,20 @@ section form {
   margin: 18px; }
 
 .contact-form label {
-  font-size: 27px;
+  font-size: 24px;
   margin-bottom: 15px;
   font-family: 'Playfair Display', serif;
   color: #0a2239; }
 
 .contact-form input {
-  font-size: 22px;
+  font-size: 24px;
   height: 30px;
   padding-left: 8px;
   border: 2px solid #0a2239;
   border-radius: 5px; }
 
 .contact-form select {
-  font-size: 22px;
+  font-size: 24px;
   height: 30px;
   padding-left: 8px;
   border: 2px solid #0a2239;
@@ -547,13 +534,13 @@ section form {
   margin: 18px; }
 
 .contact-area label {
-  font-size: 27px;
+  font-size: 24px;
   margin-bottom: 15px;
   font-family: 'Playfair Display', serif;
   color: #0a2239; }
 
 textarea {
-  font-size: 22px;
+  font-size: 24px;
   max-width: 100%;
   height: 150px;
   padding-top: 8px;
@@ -566,7 +553,7 @@ textarea {
   padding-bottom: 30px; }
 
 .boton input {
-  font-size: 18px;
+  font-size: 16px;
   padding: 6px;
   border: 2px solid #0a2239;
   border-radius: 5px; }
@@ -577,7 +564,7 @@ textarea {
 
 #galeria img {
   width: 100%;
-  height: 450px;
+  height: 400px;
   border-radius: 13px;
   -webkit-transition: 0.7s;
   transition: 0.7s; }
