--- a/css/main.css
+++ b/css/main.css
@@ -463,8 +463,57 @@ body {
   -webkit-transform: scale(1.1);
   transform: scale(1.1); }
 
+video {
+  border-radius: 9px; }
+
 center {
   padding-bottom: 100px; }
+
+main {
+  padding-bottom: 30px; }
+
+.carousel-inner {
+  border-radius: 9px; }
+
+.carousel-item {
+  min-height: 100vh;
+  background-position: center;
+  background-size: cover;
+  position: relative;
+  z-index: 1; }
+
+.carousel-item:before {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: -1; }
+
+@keyframes fadeInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-30px); }
+  100% {
+    opacity: 1;
+    transform: translateX(0px); } }
+
+@keyframes fadeInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(30px); }
+  100% {
+    opacity: 1;
+    transform: translateX(0px); } }
+
+@media (max-width: 767px) {
+  .carousel-control-next,
+  .carousel-control-prev {
+    display: none; }
+  .carousel-indicators li {
+    height: 60px;
+    width: 60px; } }
 
 * {
   padding: 0;
@@ -497,24 +546,16 @@ body {
   min-height: 100vh;
   background-position: center;
   background-size: cover;
-  position: relative;
-  z-index: 1; }
-
-.home .carousel-item:before {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: -1; }
+  position: relative; }
 
 .home .carousel-item .container {
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  text-align: center; }
+  text-align: center;
+  background-color: #446b93;
+  opacity: 0.7; }
 
 .home .carousel-item h2 {
   font-size: 65px;
