--- a/scss/pages/eventos.scss
+++ b/scss/pages/eventos.scss
@@ -28,7 +28,67 @@
     transform: scale(1.1);
 }
 
+video{
+    border-radius: 9px;
+}
+
 center{
     padding-bottom: 100px;
 }
 
+main{
+    padding-bottom: 30px;
+}
+
+.carousel-inner{
+    border-radius: 9px;
+}
+
+.carousel-item{
+	min-height: 100vh;
+	background-position: center;
+	background-size: cover;
+	position: relative;
+	z-index: 1;
+}
+.carousel-item:before{
+	position: absolute;
+	left:0;
+	top:0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,0.5);
+	z-index: -1;
+}
+
+@keyframes fadeInLeft{
+	0%{
+		opacity: 0;
+		transform: translateX(-30px);
+	}
+	100%{
+		opacity: 1;
+		transform: translateX(0px);
+	}
+}
+@keyframes fadeInRight{
+	0%{
+		opacity: 0;
+		transform: translateX(30px);
+	}
+	100%{
+		opacity: 1;
+		transform: translateX(0px);
+	}
+}
+
+@media(max-width: 767px){
+  .carousel-control-next, 
+  .carousel-control-prev{
+  	display: none;
+  }
+  .carousel-indicators li{
+  	height: 60px;
+  	width: 60px;
+  }
+}
