--- a/scss/pages/index.scss
+++ b/scss/pages/index.scss
@@ -16,16 +16,6 @@
 	background-position: center;
 	background-size: cover;
 	position: relative;
-	z-index: 1;
-}
-.home .carousel-item:before{
-	position: absolute;
-	left:0;
-	top:0;
-	width: 100%;
-	height: 100%;
-	background-color: rgba(0,0,0,0.5);
-	z-index: -1;
 }
 .home .carousel-item .container{
 	position: absolute;
@@ -33,6 +23,8 @@
 	top:50%;
 	transform: translate(-50%,-50%);
 	text-align: center;
+    background-color: #446b93;
+    opacity: 0.7;
 }
 .home .carousel-item h2{
 	font-size: map-get($font-sz , font-xl);
